# ReelAI

./: .cursorrules  .env  .env.example  .eslintrc.js  .firebaserc  .gitignore  .prettierrc.js  App.tsx  app.config.ts  app.json  babel.config.js  eas.json  firebase.json  instructions.md  metro.config.js  package-lock.json  package.json  storage.rules  tsconfig.json
.firebase/: hosting.cHVibGlj.cache
android/: settings.gradle
android/app/: build.gradle
functions/: .firebaserc  firebase.json  functions.yaml  index.js  index.ts  main.py  package-lock.json  package.json  requirements.prod.txt  requirements.txt  setup.py  tsconfig.json
functions/python/thumbnail_generator/: .gcloudignore  .gitignore  .runtime  MANIFEST.in  firebase.json  main.py  package.json  pyproject.toml  requirements.prod.txt  requirements.txt  setup.py  test_local.py  test_local_direct.py  test_local_function.py  thumbnail_main.py
functions/python/thumbnail_generator/thumbnail_generator/: __init__.py  config.py  hashtag_generator.py  main.py  video.py
functions/src/: videoProcessing.ts
functions/video_thumbnail_generator.egg-info/: PKG-INFO  requires.txt  top_level.txt
ios/: Podfile
ios/ReelAI/: Info.plist
ios/ReelAI.xcodeproj/: project.pbxproj
scripts/: deploy-analyzer.sh  deploy-functions.sh  deploy-image-analyzer.sh  generate-hashtags.sh  generate-thumbnails.sh  migrateHashtags.ts  process-videos.sh  test-analyzer.sh  test_cloud_functions.py  test_firebase_storage.py  test_image_analysis.py
src/components/: VideoCard.tsx
src/config/: firebase.ts
src/hooks/: useAuth.ts  (+1 more)
(+70 files in other folders)
