[build-system]
requires = ["setuptools>=69.0.2", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thumbnail_generator"
version = "1.0.0"
dependencies = [
    "firebase-functions==0.4.2",
    "firebase-admin==6.2.0",
    "opencv-python-headless==4.8.1.78",
    "numpy==1.26.0",
    "Pillow==10.0.1",
    "google-cloud-storage==2.10.0",
    "imageio-ffmpeg==0.4.9"
]
requires-python = ">=3.11" 